[package]
name = "wasm-pass"
version = "0.1.11"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"
description = "A simple password generator"
repository = "https://github.com/collinsmuriuki/wasm-pack"
license = "MIT/APACHE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
